--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
   <h1>
     Testing on GitHub😁
   </h1>
-
+  <form id="search-form">
+    <input type="search" placeholder="Enter a city.." required class="search-input" />
+    <input type="submit" value="Search" class="search-button" />
+  </form>
 </body>
 <script src="script.js"></script>
 
