--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <h1>
     Testing on GitHub😁
   </h1>
+  <h1>
+    Hello
+  </h1>
   <form id="search-form">
     <input type="search" placeholder="Enter a city.." required class="search-input" />
     <input type="submit" value="Search" class="search-button" />
